--- a/nivel8/index.html
+++ b/nivel8/index.html
@@ -10,9 +10,9 @@
 			<p>Pasta 01</p>
 			<a href="./pasta01/boss1.html">Boss 1</a>
 			<p>Pasta 02</p>
-			<a href="./pasta02/css/css/index.html">Boss 2</a>
+			<a href="./pasta02/boss2.html">Boss 2</a>
 			<p>Pasta 03</p>
-			<a href="./pasta03/view/app/home/index.html">Boss 3</a>
+			<a href="./pasta03/boss3.html">Boss 3</a>
 			<p>Pasta 04</p>
 			<a href="./pasta04/boss4.html">Boss 4</a>
 		</div>
